changed switch statement to toLocaleDateString method

--- a/views/list.ejs
+++ b/views/list.ejs
@@ -5,10 +5,6 @@
     <title>To Do List</title>
   </head>
   <body>
-    <% if (kindOfDay === "Saturday" || kindOfDay === "Sunday") { %>
-      <h1 style="color: purple"><%= kindOfDay %>'s ToDo List</h1>
-    <% } else { %>
-      <h1 style="color: grey"><%= kindOfDay %>'s ToDo List</h1>
-    <% } %>
+    <h1><%= kindOfDay %></h1>
   </body>
 </html>
