can now have a list at root as well as one on /work

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -64,7 +64,7 @@ button {
   background-color: #89B5AF;
   color: #fff;
   font-size: 30px;
-  padding-bottom: 6px;
+  padding: 6px;
   border-width: 0;
 }
 
