--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,4 +1,4 @@
-<%- include("header") -%>
+<%- include("partials/header") -%>
 
   <div class="box" id="heading">
     <h1> <%= listTitle %> </h1>
@@ -19,4 +19,4 @@
       </form>
   </div>
 
-<%- include("footer") -%>
+<%- include("partials/footer") -%>
