--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,7 +4,7 @@ html {
   background-repeat: no repeat;
   background-position: center;
   background-attachment: fixed;
-  webkit-background-size: cover;
+  -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
